--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
     <title>My Portofolio - TailwindCSS</title>
 
     <!-- Tailwind -->
-    <link rel="stylesheet" href="dist/style.css">
+    <link rel="stylesheet"
+        href="dist/css/finalStyle.css">
+
+    <!-- Dark Mode -->
+    <script>
+        if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+            document.documentElement.classList.add('dark')
+        } else {
+            document.documentElement.classList.remove('dark')
+        }
+    </script>
 </head>
 
 <body>
     <!-- Header Start -->
     <header
-        class="bg-transparent absolute top-0 left-0 w-full flex items-center z-10">
+        class="bg-transparent absolute top-0  w-full left-0 flex items-center z-10">
         <div class="container">
             <div
                 class="flex items-center justify-between relative">
@@ -37,32 +47,56 @@
                     </button>
 
                     <nav id="nav-menu"
-                        class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                        class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none dark:bg-dark dark:shadow-slate-500 lg:dark:bg-transparent">
                         <ul class="block lg:flex">
                             <li class="group">
                                 <a href="#home"
-                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Beranda</a>
+                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Beranda</a>
                             </li>
                             <li class="group">
                                 <a href="#about"
-                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Tentang
+                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Tentang
                                     Saya</a>
                             </li>
                             <li class="group">
                                 <a href="#portfolio"
-                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">portfolio</a>
+                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">portfolio</a>
                             </li>
                             <li class="group">
                                 <a href="#skills"
-                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Skills</a>
+                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Skills</a>
                             </li>
                             <li class="group">
                                 <a href="#blog"
-                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Blog</a>
+                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Blog</a>
                             </li>
                             <li class="group">
                                 <a href="#contact"
-                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Contact</a>
+                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Contact</a>
+                            </li>
+                            <li
+                                class="flex items-center pl-8 max-sm:mt-3">
+                                <div class="flex">
+                                    <span
+                                        class="mr-2 text-sm text-slate-500">Light</span>
+                                    <input
+                                        type="checkbox"
+                                        class="hidden"
+                                        id="dark-toggle">
+                                    <label
+                                        for="dark-toggle">
+                                        <div
+                                            class="flex h-5 w-9 cursor-pointer items-center rounded-full bg-slate-500 p-1">
+                                            <div
+                                                class="toggle-dark h-4 w-4 rounded-full bg-white transition duration-300 ease-in-out">
+                                            </div>
+                                        </div>
+                                    </label>
+                                    <span
+                                        class="ml-2
+                                        text-sm
+                                        text-slate-500">Dark</span>
+                                </div>
                             </li>
                         </ul>
                     </nav>
@@ -74,7 +108,7 @@
 
 
     <!-- Hero Section Start -->
-    <section id="home" class="pt-36">
+    <section id="home" class="pt-36 dark:bg-dark">
         <div class="container">
             <div class="flex flex-wrap">
                 <div
@@ -83,14 +117,14 @@
                         class="text-base font-semibold text-primary md:text-xl">
                         Halo Semua
                         👋, saya <span
-                            class="block font-bold text-dark text-4xl mt-1 lg:text-5xl mb-1 lg:mb-2">Bagas
+                            class="block font-bold text-dark text-4xl mt-1 lg:text-5xl mb-1 lg:mb-2 dark:text-white">Bagas
                             Berlian Tri
                             Cahyono</span>
                     </h1>
                     <h2
                         class="font-medium text-secondary text-lg mb-5 lg:text-2xl">
                         Student & <span
-                            class="text-dark">Software
+                            class="text-dark dark:text-white">Software
                             Engineer</span>
                     </h2>
                     <p
@@ -100,7 +134,7 @@
                         mudah dan menyenangkan
                         bukan.
                         <span
-                            class="text-dark font-bold">bukan!</span>
+                            class="text-dark font-bold dark:text-white">bukan!</span>
                     </p>
 
                     <a href=""
@@ -115,9 +149,9 @@
                         <img width="500"
                             src="dist/img/profil.png"
                             alt="Bagas Berlian Tri Cahyono Picture"
-                            class="max-w-full mx-auto">
+                            class="max-w-full mx-auto relative z-10">
                         <span
-                            class="absolute top-0 -z-10 left-1/2 -translate-x-1/2 md:scale-125">
+                            class="absolute top-0 left-1/2 -translate-x-1/2 md:scale-125">
                             <svg width="400"
                                 height="400"
                                 viewBox="0 0 200 200"
@@ -137,7 +171,8 @@
 
 
     <!-- About Section Start -->
-    <section id="about" class="pt-36 pb-32">
+    <section id="about"
+        class="pt-36 pb-32 dark:bg-dark">
         <div class="container">
             <div class="flex flex-wrap">
                 <div
@@ -146,7 +181,7 @@
                         class="font-bold uppercase text-primary text-lg mb-3">
                         Tentang Saya</h4>
                     <h2
-                        class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">
+                        class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl dark:text-white">
                         Hi, Saya Pengen magang
                         MSIB
                     </h2>
@@ -162,7 +197,7 @@
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
                     <h3
-                        class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">
+                        class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10 dark:text-white">
                         Mari Berteman</h3>
                     <p
                         class="font-medium text-base text-secondary mb-6 lg:text-lg">
@@ -276,7 +311,7 @@
 
     <!-- Portfolio Start -->
     <section id="portfolio"
-        class="pt-36 pb-16 bg-slate-100">
+        class="pt-36 pb-16 bg-slate-100 dark:bg-slate-800">
         <div class="container">
             <div class="w-full px-4">
                 <div
@@ -285,7 +320,7 @@
                         class="font-semibold text-lg text-primary mb-2">
                         Portfolio</h4>
                     <h2
-                        class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">
+                        class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">
                         Project Terbaru</h2>
                     <p
                         class="font-medium text-secondary text-md md:text-lg">
@@ -309,7 +344,7 @@
                             width="w-full">
                     </div>
                     <h1
-                        class="font-semibold text-xl text-dark mt-5 mb-3">
+                        class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">
                         Myhotels Managemen
                         Prototipe</h1>
                     <p
@@ -328,7 +363,7 @@
                             width="w-full">
                     </div>
                     <h1
-                        class="font-semibold text-xl text-dark mt-5 mb-3">
+                        class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">
                         Myhotels Managemen
                         Prototipe</h1>
                     <p
@@ -347,7 +382,7 @@
                             width="w-full">
                     </div>
                     <h1
-                        class="font-semibold text-xl text-dark mt-5 mb-3">
+                        class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">
                         Myhotels Managemen
                         Prototipe</h1>
                     <p
@@ -366,7 +401,7 @@
                             width="w-full">
                     </div>
                     <h1
-                        class="font-semibold text-xl text-dark mt-5 mb-3">
+                        class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">
                         Myhotels Managemen
                         Prototipe</h1>
                     <p
@@ -385,7 +420,7 @@
 
     <!-- Skills Section Start -->
     <section id="skills"
-        class="pt-36 pb-32 bg-slate-800">
+        class="pt-36 pb-32 bg-slate-800 dark:bg-slate-300">
         <div class="container">
             <div class="w-full px-4">
                 <div
@@ -394,7 +429,7 @@
                         class="font-semibold text-lg text-primary mb-2">
                         My Skills</h4>
                     <h2
-                        class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">
+                        class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-dark">
                         Front-End & Back-End</h2>
                     <p
                         class="font-medium text-secondary text-md md:text-lg">
@@ -532,7 +567,7 @@
 
     <!-- Blog Section Start -->
     <section id="blog"
-        class="pt-36 pb-32 bg-slate-100">
+        class="pt-36 pb-32 bg-slate-100 dark:bg-dark">
         <div class="container">
             <div class="w-full px-4">
                 <div
@@ -541,7 +576,7 @@
                         class="font-semibold text-lg text-primary mb-2">
                         Blog</h4>
                     <h2
-                        class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">
+                        class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">
                         Tulisan Terkini</h2>
                     <p
                         class="font-medium text-secondary text-md md:text-lg">
@@ -557,14 +592,14 @@
                 <div
                     class="w-full px-4 lg:w-1/2 xl:w-1/3">
                     <div
-                        class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+                        class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
                         <img src="https://source.unsplash.com/360x200?programming"
                             alt="Programming"
                             class="w-full">
                         <div class="py-8 px-6">
                             <h3>
                                 <a href="#"
-                                    class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Tips
+                                    class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white">Tips
                                     Belajar
                                     Programming
                                 </a>
@@ -586,14 +621,14 @@
                 <div
                     class="w-full px-4 lg:w-1/2 xl:w-1/3">
                     <div
-                        class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+                        class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
                         <img src="https://source.unsplash.com/360x200?laravel"
                             alt="Framework Laravel"
                             class="w-full">
                         <div class="py-8 px-6">
                             <h3>
                                 <a href="#"
-                                    class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Framework
+                                    class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white">Framework
                                     yang umum
                                     digunakan
                                 </a>
@@ -615,14 +650,14 @@
                 <div
                     class="w-full px-4 lg:w-1/2 xl:w-1/3">
                     <div
-                        class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+                        class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
                         <img src="https://source.unsplash.com/360x200?mechanical+keyboard"
                             alt="Mechanical Keyboard"
                             class="w-full">
                         <div class="py-8 px-6">
                             <h3>
                                 <a href="#"
-                                    class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Mechanical
+                                    class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white">Mechanical
                                     Keyboard
                                     terbaru
                                 </a>
@@ -648,16 +683,17 @@
 
 
     <!-- Contact Section Start -->
-    <section id="contact" class="pt-36 pb-32">
+    <section id="contact"
+        class="pt-36 pb-32 dark:bg-slate-800">
         <div class="container">
             <div class="w-full px-4">
                 <div
                     class="max-w-xl mx-auto text-center mb-16">
                     <h4
-                        class="font-semibold text-lg text-primary mb-2">
+                        class="font-semibold text-lg text-primary mb-2 ">
                         Contact Me</h4>
                     <h2
-                        class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">
+                        class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">
                         Hubungi Saya</h2>
                     <p
                         class="font-medium text-secondary text-md md:text-lg">
@@ -866,6 +902,14 @@
         </div>
     </footer>
     <!-- Footer End -->
+
+
+    <!-- Scroll to Top -->
+    <a href="#home" id="toTop"
+        class="h-14 w-14 bg-primary hidden justify-center items-center rounded-full fixed z-[9999] bottom-5 right-5 p-4 hover:animate-pulse">
+        <span
+            class="block h-5 w-5 border-t-4 border-l-4 rotate-45 mt-2"></span>
+    </a>
 
     <!-- My Js -->
     <script src="dist/js/script.js"></script>
